fix header design.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./static/css/style.css">
   <link rel="stylesheet" href="./static/css/style-mobile.css" type="text/css" media="screen and (max-width: 899px)">
 
-  <!-- GA -->
+  <!-- GoogleAnalytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GW9TT41W3B"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -32,13 +32,27 @@
 <body>
 
 <header class="header">
-  <h1 class="title-h1">
-    <span class="title-h1__left">Yukke</span>
-    <span class="title-h1__right">Mixing</span>
-  </div>
+  <h1 class="header__content">もっと<em>世界</em>を<em>ワンダー</em>に</h1>
 </header>
 
 <main class="main">
+
+
+      
+  <!-- 作業内容 -->
+  <section class="section">
+    <h2 class="section__head">作業内容</h2>
+    <div class="section__body">
+      <ol class="list-vertical">
+        <li class="list-vertical__item">ピッチ＆リズム補正</li>
+        <li class="list-vertical__item">ハモリ作成</li>
+        <li class="list-vertical__item">マスタリング</li>
+        <li class="list-vertical__item">ノイズ除去</li>
+        <li class="list-vertical__item">特殊エフェクト など</li>
+      </ol>
+    </div>
+  </section>
+  <!-- 作業内容 -->
 
   <!-- コース料金 -->
   <section class="section">
@@ -49,57 +63,54 @@
          <a href="#contact" class="card">
           <div class="card__head">ワンコーラス</div>
           <div class="card__body">
-            <div class="text-through">¥8,000-</div>
-            <div class="text-price">¥5,000-</div>
+            <div class="block-flex">
+              <div class="text-through">¥8,000-</div>
+              <div class="text-price">¥5,000-</div>
+          </div>
+          <div class="text-caution">オープン記念価格</div>
           </div>
         </a>
 
         <a href="#contact" class="card">
           <div class="card__head">フルコーラス</div>
           <div class="card__body">
-            <div class="text-through">¥10,000-</div>
-            <div class="text-price">¥7,000-</div>
+            <div class="block-flex">
+              <div class="text-through">¥10,000-</div>
+              <div class="text-price">¥7,000-</div>
+            </div>
+            <div class="text-caution">オープン記念価格</div>
           </div>
         </a>
 
         <a href="#contact" class="card">
           <div class="card__head">サビだけ</div>
           <div class="card__body">
-            <div class="text-through">¥4,000-</div>
-            <div class="text-price">¥2,500-</div>
+            <div class="block-flex">
+              <div class="text-through">¥4,000-</div>
+              <div class="text-price">¥2,500-</div>
+            </div>
+            <div class="text-caution">オープン記念価格</div>
           </div>
         </a>
 
         <a href="#contact" class="card">
           <div class="card__head">コラボ・合唱</div>
           <div class="card__body">
-            <div class="text-through">¥12,000-</div>
-            <div class="text-price">¥8,000-</div>
+            <div class="block-flex">
+              <div class="text-through">¥12,000-</div>
+              <div class="text-price">¥8,000-</div>
+            </div>
             <div class="text-caution">2名様料金</div>
             <div class="text-caution">3名様以降は +¥4,000-</div>
+            <div class="text-caution">オープン記念価格</div>
           </div>
         </a>
       </div><!-- .wrap-card -->
-      
-      <!-- 作業内容 -->
-      <div class="box-in-title">
-        <div class="box-in-title__head">作業内容</div>
-        <div class="box-in-title__body">
-          <ol class="list-horizon">
-            <li class="list-horizon__item">ピッチ＆リズム補正</li>
-            <li class="list-horizon__item">ハモリ作成</li>
-            <li class="list-horizon__item">マスタリング</li>
-            <li class="list-horizon__item">ノイズ除去</li>
-            <li class="list-horizon__item">特殊エフェクト など</li>
-          </ol>
-        </div>
-      </div>
-      <!-- 作業内容 -->
 
       <!-- オプション -->
-      <div class="box-in-title">
-        <div class="box-in-title__head">オプション</div>
-        <div class="box-in-title__body">
+      <div class="section-in-title">
+        <div class="section-in-title__head">オプション</div>
+        <div class="section-in-title__body">
           <ol class="list-vertical">
             <li class="list-vertical__item">お急ぎMix +¥4,000-（48時間以内納品）</li>
             <li class="list-vertical__item">特急Mix +¥7,000-（24時間以内納品）</li>
@@ -135,7 +146,7 @@
         <li class="list-number__item">ご入金</li>
         <li class="list-number__item">入金確認後、作業開始</li>
         <li class="list-number__item">Mix & マスタリング</li>
-        <li class="list-number__item">修正点があればご納得頂けるまで微調整</li>
+        <li class="list-number__item">ご納得頂けるまで微調整</li>
         <li class="list-number__item">納品完了</li>
       </ol>
     </div>
