--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./static/images/favicon-16x16.png">
-  <link rel="manifest" href="./static/images/site.webmanifest">
-  <link rel="mask-icon" href="./static/images/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./static/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./static/images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="./static/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#161616">
   <link rel="preconnect" href="https://fonts.googleapis.com">
